# ebsc

./: .gitignore  README.md  pyproject.toml
examples/: sod_sampling_vtc23.py  test_signals_vtc23.py  vbw_projection_vtc24.py
src/ebsc/: __init__.py  data_types.py  detectors.py  error_calculation.py  function_types.py  projection.py  signal_generators.py
tests/: test_data_types.py  test_function_types.py  test_projection.py  test_signal_generators.py
